--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Oliver Turner",
     "email": "oliver.turner@codedsignal.co.uk"
   },
-  "keywords": ["css", "jeffsum"],
+  "keywords": ["css", "gradient", "jeffsum"],
   "license": "MIT",
   "main": "index.js",
   "repository": {
