--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "keywords": [
     "css",
     "gradient",
-    "jeffsum"
+    "jeffsum",
+    "lorem-ipsum",
+    "jeff-goldblum",
+    "houdini",
+    "typedom",
+    "waapi",
+    "css-properties-and-values"
   ],
   "description": "Declaratively animate gradients in pure CSS through the power of the Jeff",
   "author": {
