--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "main": "src/index.html",
   "devDependencies": {
-    "cssnano": "4.1.8",
-    "parcel-bundler": "^1.6.1",
-    "postcss-preset-env": "6.5.0"
+    "cssnano": "4.1.10",
+    "cypress": "3.3.1",
+    "parcel-bundler": "^1.12.3",
+    "postcss-preset-env": "6.6.0"
   },
   "scripts": {
     "build": "parcel build ./src/index.html",
