--- a/package.json
+++ b/package.json
@@ -33,10 +33,18 @@
     "servor": "2.2.1"
   },
   "scripts": {
-    "postcss": "postcss src/styles/*.pcss --dir src/css --ext css -w",
-    "dev": "yarn postcss & servor src"
+    "transpile:css": "postcss src/styles/*.pcss",
+    "dev:css": "yarn transpile:css --dir src/css --ext css -w",
+    "dev:serve": "servor src",
+    "build:css": "yarn transpile:css --dir dist/css --ext css",
+    "build:js": "cp -R src/js dist",
+    "build:assets": "cp -R src/img dist",
+    "build:html": "cp src/index.html dist",
+    "dev": "run-p dev:*",
+    "build": "run-s build:*"
   },
   "dependencies": {
+    "npm-run-all": "4.1.5",
     "postcss-cli": "6.1.2"
   }
 }
